faculty-veda page done

--- a/src/pug/layouts/faculties-courses.pug
+++ b/src/pug/layouts/faculties-courses.pug
@@ -10,7 +10,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-courses__img-1.animated.flipInX(data-wow-duration="1s", data-wow-delay=".3s")
-                        .faculties-main__img--title Вводный курс<br>Академии
+                        .faculties-main__title
+                            .faculties-main__img--title Вводный курс<br>Академии
+                            .faculties-main__more ПОДРОБНЕЕ
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full Бесплатно
                     p.faculties-courses__desc
@@ -19,7 +21,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-courses__img-2.animated.flipInX(data-wow-duration="1s", data-wow-delay=".6s")
-                        .faculties-main__img--title Что такое веди-<br>ческая астрология<br>джйотиш?
+                        .faculties-main__title
+                            .faculties-main__img--title Что такое веди-<br>ческая астрология<br>джйотиш?
+                            .faculties-main__more ПОДРОБНЕЕ
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full Бесплатно
                     p.faculties-courses__desc
@@ -28,7 +32,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-courses__img-3.animated.flipInX(data-wow-duration="1s", data-wow-delay=".9s")
-                        .faculties-main__img--title Мировоззрение<br>и гармония<br>сознания
+                        .faculties-main__title
+                            .faculties-main__img--title Мировоззрение<br>и гармония<br>сознания
+                            .faculties-main__more ПОДРОБНЕЕ
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full 2 000 руб.
                     p.faculties-courses__desc
@@ -37,7 +43,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-courses__img-4.animated.flipInX(data-wow-duration="1s", data-wow-delay="1.2s")
-                        .faculties-main__img--title Дхарма<br>Предназначение<br>Цели и путь
+                        .faculties-main__title
+                            .faculties-main__img--title Дхарма<br>Предназначение<br>Цели и путь
+                            .faculties-main__more ПОДРОБНЕЕ
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full 6 000 руб.
                     p.faculties-courses__desc
@@ -51,7 +59,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-courses__img-5.animated.flipInX(data-wow-duration="1s", data-wow-delay=".3s")
-                        .faculties-main__img--title Онлайн марафон<br>"Биохакинг.<br>Живая диета"
+                        .faculties-main__title
+                           .faculties-main__img--title Онлайн марафон<br>"Биохакинг.<br>Живая диета"
+                           .faculties-main__more ПОДРОБНЕЕ
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full 6 000 руб.
                     p.faculties-courses__desc
@@ -60,7 +70,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-courses__img-6.animated.flipInX(data-wow-duration="1s", data-wow-delay=".6s")
-                        .faculties-main__img--title Здоровье<br>гормональной<br>системы
+                        .faculties-main__title
+                            .faculties-main__img--title Здоровье<br>гормональной<br>системы
+                            .faculties-main__more ПОДРОБНЕЕ
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full 900 руб.
                     p.faculties-courses__desc
@@ -69,7 +81,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-courses__img-7.animated.flipInX(data-wow-duration="1s", data-wow-delay=".9s")
-                        .faculties-main__img--title Марафон<br>для женщин<br>"Полюби себя"
+                        .faculties-main__title
+                            .faculties-main__img--title Марафон<br>для женщин<br>"Полюби себя"
+                            .faculties-main__more ПОДРОБНЕЕ
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full 3 900 руб.
                     p.faculties-courses__desc
@@ -78,7 +92,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-courses__img-8.animated.flipInX(data-wow-duration="1s", data-wow-delay="1.2s")
-                        .faculties-main__img--title Подготовка.<br>Беременность.<br>Рождение ребенка.
+                        .faculties-main__title
+                            .faculties-main__img--title Подготовка.<br>Беременность.<br>Рождение ребенка.
+                            .faculties-main__more ПОДРОБНЕЕ
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full 8 000 руб.
                     p.faculties-courses__desc
