--- a/src/pug/layouts/faculties-main.pug
+++ b/src/pug/layouts/faculties-main.pug
@@ -9,7 +9,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-main__img--1.animated.flipInX(data-wow-duration="1s", data-wow-delay=".3s")
-                        .faculties-main__img--title Искусство жизни.<br>Веды. Практическая<br>психология
+                        .faculties-main__title
+                            .faculties-main__img--title Искусство жизни.<br>Веды. Практическая<br>психология
+                            .faculties-main__more ПОДРОБНЕЕ
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full От 21 000 руб.
                     .faculties-main__name ДАЕТ КВАЛИФИКАЦИЮ
@@ -24,7 +26,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-main__img--2.animated.flipInX(data-wow-duration="1s", data-wow-delay=".6s")
-                        .faculties-main__img--title Классическая йога.<br>Йога-терапия<br><br>
+                        .faculties-main__title
+                            .faculties-main__img--title Классическая йога.<br>Йога-терапия<br><br>
+                            .faculties-main__more ПОДРОБНЕЕ
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full От 21 000 руб.
                     .faculties-main__name ГОТОВИТ СПЕЦИАЛИСТОВ
@@ -39,7 +43,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-main__img--3.animated.flipInX(data-wow-duration="1s", data-wow-delay=".9s")
-                        .faculties-main__img--title Ведическая<br>астрология<br>джйотиш
+                        .faculties-main__title
+                            .faculties-main__img--title Ведическая<br>астрология<br>джйотиш
+                            .faculties-main__more ПОДРОБНЕЕ
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full От 21 000 руб.
                     .faculties-main__name ГОТОВИТ СПЕЦИАЛИСТОВ
@@ -53,7 +59,9 @@
             .col-1-4.col-sm-1-2.col-xs-1-1
                 .faculties-main__item
                     a(href="#null").faculties-main__img.faculties-main__img--4.animated.flipInX(data-wow-duration="1s", data-wow-delay="1.2s")
-                        .faculties-main__img--title Ведическая<br>архитектура<br>васту
+                        .faculties-main__title
+                            .faculties-main__img--title Ведическая<br>архитектура<br>васту
+                            .faculties-main__more ПОДРОБНЕЕ
                     .btn__wrapper.btn__wrapper--center-overlapped
                         .btn.btn--full От 21 000 руб.
                     .faculties-main__name ГОТОВИТ СПЕЦИАЛИСТОВ
