--- a/src/stylus/styles/content/faculty.styl
+++ b/src/stylus/styles/content/faculty.styl
@@ -130,7 +130,7 @@
     font-weight 300
     &:before
       content ""
-      background-image url("/img/custom/flower-gradient.png")
+      background-image url("../img/custom/flower-gradient.png")
       background-size cover
       width 40px
       height 34px
