--- a/src/stylus/styles/content/faculties.styl
+++ b/src/stylus/styles/content/faculties.styl
@@ -64,32 +64,47 @@
       position absolute
       top 60px
       width 100%
-      background-color rgba(0,0,0,.5)
       +to-width($screen-sm-max)
         top 40px
-
+      :nth-child(1)
+        background-color rgba(0,0,0,.5)
 
     &--title
       padding 1em 1em
       color white
       font-family $font-second
 
+    &:before
+      border-radius 25px
+      background rgba(0,0,0,0)
+      transition: all .5s
+      content ""
+      position absolute
+      top 0
+      bottom 0
+      left 0
+      right 0
+      z-index 3
     &:hover
       > div
-        background-color rgba(0,0,0,0)
-        transition: all .8s
-        color $base-color
+        :nth-child(1)
+          background-color rgba(0,0,0,0)
+          transition: all .8s
+          color $base-color
       &:before
-        border-radius 25px
         background rgba(0,0,0,.5)
-        transition: all .5s
-        content ""
-        position absolute
-        top 0
-        bottom 0
-        left 0
-        right 0
-        z-index 3
+
+      :nth-child(2)
+        opacity 1
+        transition opacity 0.8s ease
+
+  &__more
+    margin-top 5px
+    opacity 0
+    transition opacity 0.8s ease
+    +to-width($screen-sm-max)
+      opacity 1
+      color white
 
   &__name
     padding-top 2em
