course page begin

--- a/src/pug/layouts/faculty/faculty-veda-learning.pug
+++ b/src/pug/layouts/faculty/faculty-veda-learning.pug
@@ -137,87 +137,7 @@
                 | отношениях, концентрации и основах йоги,<br>
                 | без которых восприятие любой ведической науки невозможно.
 
-        .grid.grid-nomargin-top.package-types
-            .col-1-4.col-sm-1-2.col-xs-1-1
-                a(href="#null")
-                    .package__wrapper
-                        .text__c.text__18.text__romul.text__black Консультант
-                        .text__c.text__18.text__romul.text__gray I, II, III СТУПЕНИ
-                        .line-divider-in-box
-                        .text__c.text__14.text__pink.margin-bottom20 Онлайн
-                        .text__c.text__18.text__black 45 000 руб.
-                        .buy__wrapper
-                            .buy.text__c.text__16.text__medium.text__blue КУПИТЬ
-            .col-1-4.col-sm-1-2.col-xs-1-1
-                a(href="#null")
-                    .package__wrapper
-                        .text__c.text__18.text__romul.text__black Консультант
-                        .text__c.text__18.text__romul.text__gray I, II, III СТУПЕНИ
-                        .line-divider-in-box
-                        .text__c.text__14.text__pink.margin-bottom20 Очный
-                        .text__c.text__18.text__black 60 000 руб.
-                        .buy__wrapper
-                            .buy.text__c.text__16.text__medium.text__blue КУПИТЬ
-            .col-1-4.col-sm-1-2.col-xs-1-1
-                a(href="#null")
-                    .package__wrapper
-                        .text__c.text__18.text__romul.text__black Консультант
-                        .text__c.text__18.text__romul.text__gray I, II, III СТУПЕНИ
-                        .line-divider-in-box
-                        .text__c.text__14.text__pink.margin-bottom20 Стандарт <span class="text__gray">(онлайн/очно)</span>
-                        .text__c.text__18.text__black 78 000 руб.
-                        .buy__wrapper
-                            .buy.text__c.text__16.text__medium.text__blue КУПИТЬ
-            .col-1-4.col-sm-1-2.col-xs-1-1
-                a(href="#null")
-                    .package__wrapper
-                        .text__c.text__18.text__romul.text__black Консультант
-                        .text__c.text__18.text__romul.text__gray I, II, III СТУПЕНИ
-                        .line-divider-in-box
-                        .text__c.text__14.text__pink.margin-bottom20 Элит<span class="text__gray">(онлайн/очно)</span>
-                        .text__c.text__18.text__black 198 000 руб.
-                        .buy__wrapper
-                            .buy.text__c.text__16.text__medium.text__blue КУПИТЬ
-            .col-1-4.col-sm-1-2.col-xs-1-1
-                a(href="#null")
-                    .package__wrapper
-                        .text__c.text__18.text__romul.text__black Наставник
-                        .text__c.text__18.text__romul.text__gray I — IV СТУПЕНИ
-                        .line-divider-in-box
-                        .text__c.text__14.text__pink.margin-bottom20 Онлайн
-                        .text__c.text__18.text__black 59 000 руб.
-                        .buy__wrapper
-                            .buy.text__c.text__16.text__medium.text__blue КУПИТЬ
-            .col-1-4.col-sm-1-2.col-xs-1-1
-                a(href="#null")
-                    .package__wrapper
-                        .text__c.text__18.text__romul.text__black Наставник
-                        .text__c.text__18.text__romul.text__gray I — IV СТУПЕНИ
-                        .line-divider-in-box
-                        .text__c.text__14.text__pink.margin-bottom20 Очный
-                        .text__c.text__18.text__black 72 000 руб.
-                        .buy__wrapper
-                            .buy.text__c.text__16.text__medium.text__blue КУПИТЬ
-            .col-1-4.col-sm-1-2.col-xs-1-1
-                a(href="#null")
-                    .package__wrapper
-                        .text__c.text__18.text__romul.text__black Наставник
-                        .text__c.text__18.text__romul.text__gray I — IV СТУПЕНИ
-                        .line-divider-in-box
-                        .text__c.text__14.text__pink.margin-bottom20 Стандарт<span class="text__gray">(онлайн/очно)</span>
-                        .text__c.text__18.text__black 102 000 руб.
-                        .buy__wrapper
-                            .buy.text__c.text__16.text__medium.text__blue КУПИТЬ
-            .col-1-4.col-sm-1-2.col-xs-1-1
-                a(href="#null")
-                    .package__wrapper
-                        .text__c.text__18.text__romul.text__black Наставник
-                        .text__c.text__18.text__romul.text__gray I — IV СТУПЕНИ
-                        .line-divider-in-box
-                        .text__c.text__14.text__pink.margin-bottom20 Элит<span class="text__gray">(онлайн/очно)</span>
-                        .text__c.text__18.text__black 252 000 руб.
-                        .buy__wrapper
-                            .buy.text__c.text__16.text__medium.text__blue КУПИТЬ
+
 
 
     .course__compare-package.text__c
@@ -244,8 +164,8 @@
                     p Веды изначально являются цельным Знанием, гармонично объединяющим духовный и материальный аспекты.
                         | Они позволяют искателю успешно достичь двух целей: материальной (успешной жизни в материальном мире)
                         | и духовной (душевной гармонии, счастья, просветления и освобождения).
-                    p Веды можно сравнить с матерью, которая дает своим детям все в матеральном мире, но при этом
-                        | указвыает на отца — Всевышнего. Человеческое тело Веды сравнивают с лодкой, на которой можно
+                    p Веды можно сравнить с матерью, которая дает своим детям все в матеральном мире, но при этом указывает
+                        |  на отца — Всевышнего. Человеческое тело Веды сравнивают с лодкой, на которой можно
                         | пересечь океан материального мира под руководством капитана — духовного наставника, благодаря
                         | очищению разума и Знанию Веды, которая, как ветер, наполняет паруса.
                     p Современная наука подтвердила возраст текстов Веды — около 5000 лет.
