--- a/src/stylus/styles/content/faculties.styl
+++ b/src/stylus/styles/content/faculties.styl
@@ -406,6 +406,8 @@
       font-family $font-second
   &__18
     font-size 18px
+  &__40
+    font-size 40px
   &__romul
     font-family $font-second
   &__pink16light
