--- a/src/stylus/styles/content/faculty.styl
+++ b/src/stylus/styles/content/faculty.styl
@@ -245,3 +245,7 @@
     margin-bottom 40px
 .margin-bottom20
   margin-bottom 20px
+.margin-bottom10
+  margin-bottom 10px
+.padding-top100
+  padding-top 100px
